# gabriel-core

./: .gitignore  M1_IMPLEMENTATION.md  README.md  alembic.ini  docker-compose.yml  out1.txt  pyproject.toml  requirements.txt  requirments.txt
.gabriel/: gateway_events.db
alembic/: env.py
alembic/versions/: a1c9e4d7f2b3_create_audit_log_table.py  ae642da113fe_create_organizations_table.py  b3c7d8e9f012_migrate_legacy_grn_format.py  b4d8e9f0c1a2_create_principals_and_events_tables.py  c5e9f1a2b3d4_create_resource_projection_table.py  d6f0a2b4c8e1_create_agents_table.py  e7a1b3c5d9f2_create_tools_table.py  f174bb2bb84c_add_policy_agent_tool_tables.py  g8b1c2d3e4f5_add_memory_entries_table_pgvector.py  h2b4c6d8e0f1_phase2_tool_migration.py  i9c3d5e7f1a2_add_users_memberships_refresh_tokens.py  j0d4e6f8a2b3_add_phase2_core_business_tables.py  k1e5f7a9b3c4_add_phase4_document_knowledge_tables.py  l3a7b9c1d5e6_add_tool_runtime_fields_and_source_type.py  m2d4f6a8b0c1_tool_parameters_schema_unification.py
docker/postgres/: init-pgvector.sql
docs/: API.md  ARCHITECTURE.md  MERGE_ORDER.md  agent-specification-system.md
docs/adr/: 0001-principal-resource-mirroring.md  0009-grn-factory-integration.md  0010-peel-wiring-and-document-ingestion.docx  0010-peel-wiring-and-document-ingestion.md  0011-agent-specification-migration.md  0012-password-auth-and-org-membership.md  0013-core-business-logic.md  0014-gateway-ai-runtime.md  0015-document-knowledge-rag.md
docs/learned/: !r.md
scripts/: seed_agent_specs.py  seed_legacy_policies.py  seed_tools.py
tests/api/: conftest.py  (+20 more)
(+320 files in other folders)
