[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gabriel-core"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "alembic",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "langgraph",
    "langchain-core",
    "python-multipart",
    "pgvector",
    "rich",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]